# Claude-Code-Usage-Tracker

./: .gitignore  README.md  README_CN.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.ps1  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/usage/: background.rs  cache.rs  config.rs  mod.rs  models.rs  pricing.rs  reader.rs  stats.rs
src-tauri/src/usage/telemetry/: collector.rs  datasource.rs  mod.rs  models.rs  reader.rs  storage.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AnimatedNumber.tsx  AnimatedProgressBar.tsx  CompactOverallView.tsx  CompactProjectView.tsx  MiniView.tsx  OverallUsageView.tsx  ProjectUsageView.tsx  TitleBar.tsx
web/src/hooks/: useUsage.ts
web/src/styles/: globals.css
