[package]
name = "claude-code-usage-tracker"
version = "0.1.0"
description = "A desktop application for tracking Claude Code usage statistics"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "claude-code-usage-tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "claude_code_usage_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claude-code-usage-tracker"
path = "src/main.rs"

[[bin]]
name = "compare_stats"
path = "src/bin/compare_stats.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
# Usage monitor dependencies
glob = "0.3"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
thiserror = "1.0"
tokio = { version = "1", features = ["time"] }
